--- a/static/carousel/css/style.less
+++ b/static/carousel/css/style.less
@@ -116,7 +116,7 @@
   }
 
   #ico_list .active {
-    background: url(../img/a_hover.gif) no-repeat center 0;
+    background: url(../carousel/img/a_hover.gif) no-repeat center 0;
   }
 
   #ico_list .active img {
