--- a/static/css/article.less
+++ b/static/css/article.less
@@ -1,4 +1,5 @@
 @import "base";
+@import "breadcrumbs";
 
 .article {
   .title {
@@ -13,7 +14,7 @@
 
   .info {
     text-align: center;
-    border-bottom: #ccc 1px solid;
+    //border-bottom: #ccc 1px solid;
     padding-bottom: 10px;
 
     .iconfont {
