--- a/static/css/base.less
+++ b/static/css/base.less
@@ -1,3 +1,4 @@
+@import "float-btn";
 
 body, html {
   margin: 0px;
@@ -45,10 +46,20 @@ a {
   }
 }
 
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: rgba(#333,0.9)!important;
+  z-index: 999;
+}
+
 .navbar {
   background: #333333;
   height: 68px;
   line-height: 68px;
+  transition: background-color 0.2s;
 
   .logo {
     float: left;
@@ -188,6 +199,11 @@ a {
 
     .more {
       float: right;
+      font-size: 12px;
+
+      .iconfont {
+        font-size: 12px;
+      }
     }
   }
 }
@@ -196,6 +212,7 @@ a {
   .hot-article {
     .link {
       overflow: hidden;
+
       .round {
         display: inline-block;
         margin-right: 10px;
@@ -206,6 +223,7 @@ a {
         text-align: center;
         color: white;
       }
+
       line-height: 35px;
       height: 35px;
       white-space: nowrap;
