--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,28 @@
+.float-btn {
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+}
+.float-btn .icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: rgba(221, 221, 221, 0.8);
+  text-align: center;
+  line-height: 50px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  transition: all 0.3s;
+}
+.float-btn .icon:hover {
+  background-color: #ccc;
+}
+.float-btn .icon .iconfont {
+  font-size: 28px;
+}
+.float-btn #_float-btn-top {
+  opacity: 0;
+}
 body,
 html {
   margin: 0px;
@@ -35,10 +60,19 @@ a:hover {
 .top .btn:hover {
   color: #444;
 }
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: rgba(51, 51, 51, 0.9) !important;
+  z-index: 999;
+}
 .navbar {
   background: #333333;
   height: 68px;
   line-height: 68px;
+  transition: background-color 0.2s;
 }
 .navbar .logo {
   float: left;
@@ -158,6 +192,10 @@ a:hover {
 }
 .block .head .more {
   float: right;
+  font-size: 12px;
+}
+.block .head .more .iconfont {
+  font-size: 12px;
 }
 .side .hot-article .link {
   overflow: hidden;
@@ -436,5 +474,118 @@ a:hover {
 #carousel {
   width: 500px;
   float: left;
+}
+#carousel {
+  /* box */
+}
+#carousel * {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+#carousel a,
+#carousel img {
+  border: 0;
+}
+#carousel #box {
+  width: 500px;
+  height: 330px;
+  position: relative;
+  overflow: hidden;
+}
+#carousel #pic_list {
+  position: relative;
+  z-index: 1;
+}
+#carousel #pic_list img {
+  width: 500px;
+  height: 330px;
+}
+#carousel #pic_list li {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  fliter: alpha(opacity=0);
+  z-index: 1;
+}
+#carousel .mark {
+  height: 90px;
+  width: 500px;
+  background: #000;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  opacity: 0.3;
+  filter: alpha(opacity=30);
+}
+#carousel #text_list {
+  bottom: 55px;
+  left: 10px;
+  position: absolute;
+  z-index: 5;
+  height: 30px;
+  overflow: hidden;
+}
+#carousel #text_list h2 {
+  display: none;
+}
+#carousel #text_list .show {
+  display: block;
+}
+#carousel #text_list a {
+  color: #FFFFFF;
+  font-family: "Microsoft YaHei";
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+}
+#carousel #ico_list {
+  position: absolute;
+  bottom: 10px;
+  left: 12px;
+  width: 525px;
+  overflow: hidden;
+  height: 46px;
+  z-index: 3;
+}
+#carousel #ico_list ul {
+  width: 1050px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+#carousel #ico_list li {
+  width: 75px;
+  float: left;
+}
+#carousel #ico_list li a {
+  width: 68px;
+  padding-top: 6px;
+  display: block;
+}
+#carousel #ico_list li a img {
+  border: 2px solid #DFE8E4;
+  height: 36px;
+  width: 64px;
+  background: #040303;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+}
+#carousel #ico_list .active {
+  background: url(../carousel/img/a_hover.gif) no-repeat center 0;
+}
+#carousel #ico_list .active img {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  border: 3px solid #fff;
+  height: 34px;
+  width: 62px;
+}
+#carousel .showBtn {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  cursor: pointer;
+  z-index: 4;
 }
 /*# sourceMappingURL=index.css.map */
