--- a/templates/article.html
+++ b/templates/article.html
@@ -17,10 +17,10 @@
 {% endblock %}
 {% block main %}
     <div class="breadcrumbs-wrap">
-        <ul class="breadcrumb">
+        <ul class="breadcrumbs">
             <li><a href="/">首页</a></li>
-            <li><a href="#">Library</a></li>
-            <li class="active">Data</li>
+            <li><a href="{% url 'category' article.category.alias %}">{{article.category.name}}</a></li>
+            <li class="active">正文</li>
         </ul>
     </div>
     <div class="article">
