--- a/static/css/base.less
+++ b/static/css/base.less
@@ -51,7 +51,7 @@ a {
   top: 0;
   left: 0;
   right: 0;
-  background: rgba(#333,0.9)!important;
+  background: rgba(#333, 0.9) !important;
   z-index: 999;
 }
 
@@ -163,6 +163,12 @@ a {
 }
 
 .container {
+  .no-side-main {
+    width: auto!important;
+    margin: 0!important;
+    float: none!important;
+  }
+
   .main {
     width: calc(100% - 300px - 40px);
     margin-right: 10px;
