--- a/static/mobile/css/article.less
+++ b/static/mobile/css/article.less
@@ -1,1 +1,39 @@
 @import "style";
+@import "navbar";
+
+body {
+  background-color: white;
+}
+
+.content {
+  padding: 10px;
+  background-color: white;
+
+  .title {
+    text-align: center;
+    font-size: 28px;
+    font-weight: 500;
+    font-style: normal;
+    color: #333;
+    line-height: 36px;
+  }
+
+  .info, a {
+    text-align: center;
+    color: #666;
+  }
+
+  .info {
+    .iconfont {
+      margin-left: 20px;
+      margin-right: 5px;
+    }
+
+  }
+
+  .article {
+    font-size: 17px;
+    line-height: 26px;
+    font-weight: 400;
+  }
+}
