--- a/static/mobile/css/style.less
+++ b/static/mobile/css/style.less
@@ -2,13 +2,20 @@ html, body {
   margin: 0px;
   padding: 0px;
   height: 100%;
-  font: 14px/1.6 'Microsoft YaHei', Hei, arial, sans-serif;
+  font-family: "SF Pro SC", "SF Pro Display", "SF Pro Icons", "PingFang SC", "Helvetica Neue", "Helvetica", "Arial", sans-serif;;
+  font-size: 14px;
   color: #4C4C4C;
   background: #f3f3f3;
 }
 
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 a {
   text-decoration: none;
+
 }
 
 .header-wrap {
@@ -70,6 +77,10 @@ a {
   overflow-y: hidden;
   overflow-x: auto;
   width: auto;
+
+  .active {
+    color: #4593FF;
+  }
 
   a {
     display: inline-block;
