--- a/static/mobile/css/article.less
+++ b/static/mobile/css/article.less
@@ -36,4 +36,10 @@ body {
     line-height: 26px;
     font-weight: 400;
   }
+
+  .prev-next {
+    .item {
+      margin-bottom: 10px;
+    }
+  }
 }
